--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@
     width: 200px;
     padding: 10px;
     margin: 10px;
+    font-size: 12px;
     background-color: rgb(243, 243, 243);
 }
 
@@ -44,4 +45,17 @@
 .restaurants-container {
     display: flex;
     flex-wrap: wrap;
+}
+
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card {
+    width: 200px;
+    height: 400px;
+    padding: 10px;
+    margin: 10px;
+    background-color: rgb(241, 240, 240);
 }
