--- a/index.css
+++ b/index.css
@@ -1,61 +1,1 @@
-.header {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black
-}
-
-.logo {
-    width: 150px
-}
-
-.nav-items {
-    padding-right: 75px;
-}
-
-.nav-items > ul {
-    font-size: 24px;
-    display: flex;
-    list-style-type: none;
-}
-
-.nav-items > ul > li {
-    padding: 10px;
-    margin: 10px;
-}
-
-.restaurant-card {
-    border: 1px solid rgb(195, 192, 192);
-    width: 200px;
-    padding: 10px;
-    margin: 10px;
-    font-size: 12px;
-    background-color: rgb(243, 243, 243);
-}
-
-.restaurant-card:hover {
-    border: 1px solid black;
-    cursor: pointer;
-}
-
-.restaurant-image {
-    width: 200px;
-    height: 200px;
-}
-
-.restaurants-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.shimmer-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.shimmer-card {
-    width: 200px;
-    height: 400px;
-    padding: 10px;
-    margin: 10px;
-    background-color: rgb(241, 240, 240);
-}
+@import "tailwindcss";
